/ @TODO:                                                          \
|        - AWStats:                                                |
|           * gui: disable stats-alias in client menu              |
|           * make sure awstats is called in prerotate             |
\_________________________________________________________________/

2007-08-02 Raphael Geissert
	- ENGINE:
		* Creation of domain index page now decodes ACE domain names

2007-08-01 Raphael Geissert
	- GUI:
		* Fixed some issues with create_catchall.php

2007-07-31 Raphael Geissert
	- GUI:
		* Fixed #539: Undefined variable: total_mails
		* Removed hardcoded path in include/ispcp-lib.php
		* Re-enabled lock file check
	- CONFIGS:
		* Added status target to ispcp_network
	- ENGINE:
		* Fixed lock file location

2007-07-30 Raphael Geissert
	- GUI:
		* Fixed #538: who_owns_this' ftp_user next check was calling dmn instead of uid
	- CONFIGS:
		* Fixed #536: Error: bad username; while reading /etc/cron.d/ispcp
	- ENGINE:
		* Added initial custom cronjobs support

2007-07-29 Raphael Geissert
	- GUI:
		* Fixed #527, #528, #529, #530: Undefined index: layout_id in gui/client/*.php

2007-07-28 Raphael Geissert
	- GUI:
		* Fixed #526: Undefined index: layout_id in gui/client/*.php
		* Fixed #525: Wrong email validation in gui/orderpanel/address.php
		* Added code functionality to ispcp_debugger.php to change a domain/alias/subdomain/mail account status
		* Some i18n changes

2007-07-27 Raphael Geissert
	- ENGINE:
		* Mailbox data is now also counted in disk quota
		* Apparent size is not used anymore when counting disk quota
	- GUI:
		* Error pages now correctly escape all the < and > characters
		* Fixed error where admin's own logo is not displayed
		* Added the 'super powerful' all in one who_owns_this function
		* Fixed #359: adding a catchall requires an existent mail account

2007-07-26 Raphael Geissert
	- CONFIGS:
		* Reduced PHP_FCGI_MAX_REQUESTS to 500